[tool.poetry]
name = "predictions"
version = "0.1.0"
description = "Tools for handling vehicle predictions data."
authors = ["Shahin Saneinejad <shahin.saneinejad@sfmta.com>"]
readme = "README.md"
packages = [{include = "sfmta"}]

[tool.poetry.dependencies]
python = "^3.10"
argh = "^0.26.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
